--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ configure(allprojects) { project ->
 	apply plugin: "org.springframework.build.localdev"
 	group = "org.springframework"
 	repositories {
+		maven { url "https://maven.aliyun.com/repository/public" }
+		maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+		maven { url 'https://maven.aliyun.com/repository/central'}
 		mavenCentral()
 		maven {
 			url "https://repo.spring.io/milestone"
